<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="30dp"
    tools:context=".User.UserDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/splash_logo"/>

        <TextView
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:fontFamily="@font/custom_special_epic"
            android:text="@string/profile_please_attention"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/custom_bold"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Button
                android:onClick="callLoginScreenProfile"
                android:id="@+id/please_login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/custom_extra_bold"
                android:text="@string/retailer_login"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/please_signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/custom_extra_bold"
                android:text="@string/retailer_signUp"
                android:onClick="callSignUpScreenProfile"
                android:transitionName="transition_signup"/>
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retailer_how_this_works"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>