<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".User.DashboardFragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            style="@style/Widget.Kreastol.Text.Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragmet_theme_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.Kreastol.Text.Heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_fragmet_theme_select_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/theme_kreastol"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/kreastol_preview" />

                <ImageView
                    android:id="@+id/theme_red_pulse"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/red_pulse_preview" />

                <ImageView
                    android:id="@+id/theme_futuristic"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/futuristic_preview" />

                <ImageView
                    android:id="@+id/theme_miku"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/miku_preview" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.Kreastol.Text.Heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/settings_fragmet_theme_mode_select" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/force_dark_mode_tag"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_fragmet_theme_force_dark" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_marginHorizontal="15dp"
                            android:id="@+id/dark_mode_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/dark_mode_on_off"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_fragmet_theme_force_dark_off" />

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/dark_mode_system_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/settings_fragmet_theme_system_based" />
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/dark_mode_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/settings_fragmet_theme_auto_select" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/Widget.Kreastol.Text.Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragmet_language_category" /><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_language"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_language"/>

    </LinearLayout>


    </LinearLayout>
</LinearLayout>