<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginSignup.SignUp2ndClass"
    android:background="?attr/colorSurface"
    android:padding="30dp">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            app:tint="?attr/colorAccent"
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_button"
            android:transitionName="transition_back_arrow_btn"
            android:onClick="callBackButtonClicked"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30sp"
            android:fontFamily="@font/custom_special_epic"
            android:text="@string/retailer_signUp"
            android:textAllCaps="true"
            android:textSize="50sp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retailer_signup_choose_gender"
                android:textSize="18sp"
                android:fontFamily="@font/custom_bold"
                />

            <RadioGroup
                android:id="@+id/signup_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="15dp">

                <RadioButton
                    android:id="@+id/signup_male_r_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/retailer_signup_male_gender"
                    android:textColor="?attr/colorPrimary"
                    android:buttonTint="?attr/colorPrimary"/>

                <RadioButton
                    android:id="@+id/signup_female_r_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/retailer_signup_female_gender"
                    android:textColor="?attr/colorPrimary"
                    android:buttonTint="?attr/colorPrimary"/>

            </RadioGroup>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="?attr/colorPrimary"
                android:layout_marginVertical="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retailer_signup_select_age"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:fontFamily="@font/custom_bold" />
            <DatePicker
                android:id="@+id/signup_age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retailer_signup_next"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:fontFamily="@font/custom_extra_bold"
            android:transitionName="transition_next_btn"
            android:onClick="callNextSignScreen"/>
        <Button
            android:textColor="?attr/colorAccent"
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retailer_login"
            android:background="#00000000"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/custom_bold"
            android:transitionName="transition_login_btn"
            android:onClick="callToLogin"/>
    </LinearLayout>
</ScrollView>