<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="?attr/colorSecondary">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:adjustViewBounds="true"
            android:maxWidth="400dp"
            android:id="@+id/image_dialog_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_dialog_title"
            android:visibility="gone"
            android:hint="@string/add_post_dialog_title"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="@color/text_input_box_stroke"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2.5dp"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_regular"
                android:inputType="text"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_dialog_group"
            android:visibility="gone"
            android:hint="@string/add_image_group"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="@color/text_input_box_stroke"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2.5dp"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_regular"
                android:inputType="text"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:id="@+id/image_dialog_spinner"
            android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/custom_bold"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_post_dialog_category"/>

                <Spinner
                    android:layout_margin="5dp"
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        <View
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorAccent"/>


        <LinearLayout
            android:id="@+id/button_holder"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAlignment="center"
                android:id="@+id/image_dialog_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_semibold"
                android:text="@string/add_post_dialog_cancel_post"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/image_dialog_select"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/add_image_select_image"/>

            <Button
                android:id="@+id/image_dialog_upload"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:padding="5dp"
                android:text="@string/add_image_upload_image"/>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>