<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".User.ManagePage">

    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/custom_semibold"
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginVertical="5dp"

            android:id="@+id/event_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginVertical="5dp"

            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/record_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_event_record"/>

        <Button
            android:id="@+id/add_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_event_new_add"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center"
            android:id="@+id/event_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/users_submit"
            android:text="@string/submit_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>