<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".OnBoarding.OnBoardFragments.ThirdFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_blank" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle_blank" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle_filled" />

        </LinearLayout>

        <TextView
            android:id="@+id/skip_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/custom_semibold"
            android:onClick="skipCall"
            android:text="@string/skip_name"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>
    <TextView
        android:layout_gravity="center"
        style="@style/Widget.Kreastol.Text.Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_extra_bold"
        android:layout_marginBottom="90dp"
        android:text="@string/fragment3_title_name" />

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginBottom="92dp"
        android:src="@drawable/ic_award"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textSize="25sp"
        android:text="@string/fragment3_description_name" />

</LinearLayout>